Star wars almost done

--- a/Pages/MuseTales/ExpoList.cshtml
+++ b/Pages/MuseTales/ExpoList.cshtml
@@ -11,8 +11,7 @@
     @foreach(var item in Model.AllExpos)
     {
         <!-- Display button with Name as label -->
-        <a href="/MuseTales/MediaPLayer?id=@item.Id" class="btn btn-primary">@item.Name</a>
-        
+        <a href="/MuseTales/MediaPLayer?id=@item.Id" class="btn btn-primary">@item.Name</a><br/>
     }
 </div>
 
