--- a/Pages/MuseTales/MediaPlayer.cshtml
+++ b/Pages/MuseTales/MediaPlayer.cshtml
@@ -20,13 +20,13 @@
             <h1 align="center">@item.Name</h1>
         </header>
         <div align="center">
-            <img src="~/Images/@item.PicturePath" class="img-fluid" alt="@item.Name" width="125" height="125">
+            <img src="~/Images/@item.PicturePath" class="img-fluid" alt="@item.Name" width="250" height="250">
         </div>
         <footer align="center">
-            <div class="wrapper">
+            <div margin="50% 0 0 0" position="relative" class="wrapper">
                 <div class="scroll-text">
-                 <h2 align="center">@item.Name</h2>
-                 <p align="center">@item.Description</p>
+                 <h2 align=center >@item.Name</h2>
+                 <p>@item.Description</p>
                 </div>
             </div>
 
