--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -4,7 +4,53 @@
     ViewData["Title"] = "Home page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="container" style="text-align: center;">
+    <div class="text-box" style="font-size: 14px;">
+        <p>
+            Træd ind i den spektakulære guldbygning, mærk energien fra de største danske navne og kom helt tæt på de kreative kræfter, som har formet din musik.<br /> <br />
+
+
+
+            RAGNAROCKs udstilling er smækfyldt med fortællinger om den musik, som gennem generationer har samlet tusindvis af fans og skabt soundtracket til fællesskaber, opbrud og ungdomsliv.<br /> <br />
+
+
+            Her må du både danse og synge. Du må skrue på knapper, styre lys og mixe. Og når du trænger til en slapper, kan du tage en tur på den gigantiske, roterende pladespiller.<br /> <br />
+        </p>
+    </div>
+
+    <form method="post" class="input-box" style="text-align: center; display: flex; flex-direction: column; align-items: center;">
+        <label for="codeInput">Indsæt kode her:</label>
+        <input type="text" id="codeInput" name="codeInput" class="form-control small-input" maxlength="4" style="text-align: center;" />
+    </form>
 </div>
+
+
+<style>
+    .text-box {
+        display: inline-block;
+        border: 1px solid #000000;
+        border-radius: 10px;
+        text-align: center;
+        margin-bottom: 10px;
+        margin-right: 10px;
+        padding: 10px;
+    }
+
+    .smaller-box {
+        display: inline-block;
+        border: 1px solid #000000;
+        border-radius: 10px;
+        text-align: center;
+        margin-bottom: 10px;
+        padding: 10px;
+    }
+
+    .input-box {
+        margin-bottom: 10px;
+    }
+
+    .small-input {
+        text-align: center;
+        width: 120px;
+    }
+</style>
