--- a/Pages/MuseTales/MediaPlayer.cshtml
+++ b/Pages/MuseTales/MediaPlayer.cshtml
@@ -21,6 +21,9 @@
         </header>
         <div align="center">
             <img src="~/Images/@item.PicturePath" class="img-fluid" alt="@item.Name" width="250" height="250">
+            <form method="post">
+            <button>Play</button>
+            </form>
         </div>
         <footer align="center">
             <div margin="50% 0 0 0" position="relative" class="wrapper">
@@ -29,7 +32,6 @@
                  <p>@item.Description</p>
                 </div>
             </div>
-
         </footer>
     }
 
