--- a/Pages/MuseTales/MediaPlayer.cshtml
+++ b/Pages/MuseTales/MediaPlayer.cshtml
@@ -21,8 +21,11 @@
         </header>
         <div align="center">
             <img src="~/Images/@item.PicturePath" class="img-fluid" alt="@item.Name" width="250" height="250">
+            
+        </div>
+        <div align="center">
             <form method="post">
-            <button>Play</button>
+                <button>Play</button>
             </form>
         </div>
         <footer align="center">
