--- a/Pages/MuseTales/MediaPlayer.cshtml
+++ b/Pages/MuseTales/MediaPlayer.cshtml
@@ -24,7 +24,7 @@
             
         </div>
         <div align="center">
-            <form method="post">
+            <form method="post" asp-page-handler="Play">
                 <button>Play</button>
             </form>
         </div>
