--- a/Pages/MuseTales/MediaPlayer.cshtml
+++ b/Pages/MuseTales/MediaPlayer.cshtml
@@ -24,26 +24,18 @@
             
         </div>
         <div align="center">
-            <form method="post">
-                <button asp-page-handler="Play" asp-route-id="@item.Id">Play</button>
-            </form>
+            <audio controls>
+                <source src="~/Sound/@item.SoundFilePath" type="audio/mp3" />
+                <source src="~/Sound/@item.SoundFilePath" type="audio/vnd.wave" />
+                The system does not support this file
+            </audio>
         </div>
         <footer align="center">
             <div margin="50% 0 0 0" position="relative" class="wrapper">
-                @if (item.OutPutDevice.PlaybackState == NAudio.Wave.PlaybackState.Playing)
-                {
                 <div class="scroll-text">
                     <h2 align=center >@item.Name</h2>
                     <p>@item.Description</p>
-                    </div>
-                }
-                else
-                {
-                    <div class="still-text">
-                        <h2 align=center>@item.Name</h2>
-                        <p>@item.Description</p>
-                    </div>
-                }
+                </div>
             </div>
         </footer>
     }
