--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -19,44 +19,21 @@ html {
 
 body {
   margin-bottom: 60px;
-  overflow:hidden;
 }
 
-audio{
+.accordion-button{
+    align-content:center;
+    font-size:50px;
 }
 
-.wrapper{
-    background: rgb(20, 20, 20);
-    display:flex;
-    height:180%;
-    width:40%;
-    margin:0 auto;
-    overflow:hidden;
-    perspective:450px;
+.accordion-body{
+    font-size: 12px;
 }
 
-.scroll-text{
-    color: #ffc909;
-    font:3vw;
-    line-height: 1.5em;
-    font-weight:bold;
-    text-align:justify;
-    position: relative;
-    animation: scroll 120s linear forwards;
-}
 
-.still-text {
-    color: #ffc909;
-    font: 3vw;
-    line-height: 1.5em;
-    font-weight: bold;
-    text-align: justify;
-    position: relative;
-}
 
-@keyframes scroll{
-    from {top:0;}
-    to {top:-2000px;}
-}
+
+
+
 
 
