--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -19,8 +19,11 @@
     </div>
 
     <form method="post" class="input-box" style="text-align: center; display: flex; flex-direction: column; align-items: center;">
-        <label for="codeInput">Indsæt kode her:</label>
-        <input type="text" id="codeInput" name="codeInput" class="form-control small-input" maxlength="4" style="text-align: center;" />
+        <div class="text-danger" asp-validation-summary="ModelOnly"></div>
+        <label asp-for="credential.PinCode">Indsæt kode her:</label>
+        <input type="password" asp-for="credential.PinCode" class="form-control small-input" maxlength="4" style="text-align: center;" />
+        <span class="text-danger" asp-validation-for="credential.PinCode"></span></br>
+        <input type="submit" class="btn btn-primary" value="Oplev" />
     </form>
 </div>
 
