--- a/Pages/MuseTales/ExpoList.cshtml
+++ b/Pages/MuseTales/ExpoList.cshtml
@@ -23,9 +23,9 @@
 </div>
 
 <table>
-    <td><a href="/MuseTales/CreateExpoTest" class="btn btn-primary btn-lg btn-block">Opret ny Expo</a></td>
-    <td><a href="/MuseTales/UpdateExpoTest" class="btn btn-primary btn-lg btn-block">Opdater en expo</a></td>
-    <td><a href="/MuseTales/DeleteExpoTest" class="btn btn-primary btn-lg btn-block">Slet en Expo</a></td>
+    <td><a href="/MuseTales/AdminDash" class="btn btn-primary btn-lg btn-block">Admin kontrolpanel</a></td>
+    <td><a href="/MuseTales/Test" class="btn btn-primary btn-lg btn-block">Test</a></td>
+
 </table>
 
 
