--- a/Pages/MuseTales/AdminDash.cshtml
+++ b/Pages/MuseTales/AdminDash.cshtml
@@ -41,7 +41,7 @@
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                            <button type="button" class="btn btn-danger">Save changes</button>
+                            <button type="button" class="btn btn-danger" >Delete</button>
                             <button asp-page-handler="delete" formmethod="post" type="button" class="btn btn-danger" value="@item.Id">Delete</button>
                         </div>
                     </div>
