--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -24,6 +24,7 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/MuseTales/ExpoList">Expolist</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Index">Innerdex</a>
                         </li>
                     </ul>
                 </div>
