--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -23,8 +23,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/MuseTales/ExpoList">Expolist</a>
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Index">Innerdex</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/MuseTales/ExpoList">Expolist</a></a>
                         </li>
                     </ul>
                 </div>
