--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -22,9 +22,9 @@
     
     <form method="post" class="input-box" style="text-align: center; display: flex; flex-direction: column; align-items: center;">
         <div class="text-danger" asp-validation-summary="ModelOnly"></div>
-        <label asp-for="credential.PinCode">Indsæt kode her:</label>
-        <input type="password" asp-for="credential.PinCode" class="form-control small-input" maxlength="4" style="text-align: center;" />
-        <span class="text-danger" asp-validation-for="credential.PinCode"></span></br>
+        <label asp-for="codes.pincode">Indsæt kode her:</label>
+        <input type="password" asp-for="codes.pincode" class="form-control small-input" maxlength="4" style="text-align: center;" />
+        <span class="text-danger" asp-validation-for="codes.pincode"></span></br>
         <input type="submit" class="btn btn-primary" value="Oplev" />
     </form>
 </div>
