--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -23,12 +23,18 @@ body {
 
 .accordion-button{
     align-content:center;
-    font-size:50px;
+    font-size:15px;
 }
 
 .accordion-body{
     font-size: 12px;
 }
+
+.accordion-item {
+    width: 90%;
+    margin: auto;
+}
+
 
 
 
