--- a/Pages/MuseTales/ExpoList.cshtml
+++ b/Pages/MuseTales/ExpoList.cshtml
@@ -4,6 +4,12 @@
 @{
     ViewData["Title"] = "Liste over alle udstillinger";
 }
+@if(HttpContext.Session.GetString("User")!=null)
+{
+    @HttpContext.Session.GetString("User")
+
+}
+
 <header>
     <h1 align="center">@ViewData["Title"]</h1>
 </header>
