--- a/Pages/MuseTales/AdminDash.cshtml
+++ b/Pages/MuseTales/AdminDash.cshtml
@@ -78,12 +78,12 @@
 
                                     <div class="row">
                                         <label>Billede af udstillingen</label>
-                                        <input asp-for="Expo.PicturePath" type="file" class="" required name="PicturePath" value="@item.PicturePath">
+                                        <input asp-for="Expo.PicturePath" type="file" class="" required name="PicturePath">
                                     </div>
 
                                     <div class="row">
                                         <label>Vælg lydfil til oplæsning</label>
-                                        <input asp-for="Expo.SoundFilePath" type="file" class="" required name="SoundFilePath" value="@item.SoundFilePath">
+                                        <input asp-for="Expo.SoundFilePath" type="file" class="" required name="SoundFilePath">
                                     </div>
                                 </div>
                                 <input type="hidden" name="id" value="@item.Id" />
