--- a/Pages/MuseTales/ExpoList.cshtml
+++ b/Pages/MuseTales/ExpoList.cshtml
@@ -10,11 +10,7 @@
     
 </header>
 <div>
-<form method="post" style="position: absolute; right: 0;">
-    <name ="qrcode" asp-for="@Model.QRCodeImage" />
-    <input type="submit" value="Scan QR Kode" asp-page-handler="Scan QR Kode" />
-</form>
-</div>
+
 
 <div align="center">
    
@@ -30,8 +26,16 @@
     }
 </div>
 
-<table>
-    <td><a href="/MuseTales/AdminDash" class="btn btn-primary btn-lg btn-block">Admin kontrolpanel</a></td>
-</table>
+<div style="position: relative;">
+    <a href="/MuseTales/AdminDash" class="btn btn-primary btn-lg btn-block" style="display: inline-block;">Admin kontrolpanel</a>
+    <form method="post" style="display: inline-block; position: absolute; bottom: 0; right: 0;">
+        <input type="hidden" name="qrcode" asp-for="@Model.QRCodeImage" />
+            <a href="https://museumragnarock.dk/">
+        <img src="~/Images/adobe-express-qr-code.png" style="width: 50px; height: 50px;"/>
+            </a>
+    </form>
+</div>
+
+
 
 
