--- a/Pages/MuseTales/AdminDash.cshtml
+++ b/Pages/MuseTales/AdminDash.cshtml
@@ -63,7 +63,7 @@
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
                         <div class="modal-body">
-                            <form asp-page-handler="update" method="post">
+                            <form asp-page-handler="Update" method="post">
                                 <div class="row">
                                     <div class="col">
                                         <label>Expo navn</label>
@@ -133,6 +133,7 @@
                             <input asp-for="Expo.SoundFilePath" type="file" class="" name="SoundFilePath">
                         </div>
                     </div>
+
                     <button class="form-control" type="submit">opret</button>
                 </form>
                 <div class="modal-footer">
