--- a/Pages/Shared/_Layout.cshtml.css
+++ b/Pages/Shared/_Layout.cshtml.css
@@ -42,7 +42,7 @@ button.accept-policy {
 footer {
     background-color: black;
     color: white;
-    /top, right, bottom, left/ padding: 35px 80px 35px 15px;
+    padding: 35px 80px 0 15px;
 }
 
 .footer-grid-container {
