--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -9,14 +9,11 @@
 <div class="container" style="text-align: center;">
     <div class="text-box" style="font-size: 14px;">
         <p>
-            Træd ind i den spektakulære guldbygning, mærk energien fra de største danske navne og kom helt tæt på de kreative kræfter, som har formet din musik.<br /> <br />
-
-
-
-            RAGNAROCKs udstilling er smækfyldt med fortællinger om den musik, som gennem generationer har samlet tusindvis af fans og skabt soundtracket til fællesskaber, opbrud og ungdomsliv.<br /> <br />
-
-
-            Her må du både danse og synge. Du må skrue på knapper, styre lys og mixe. Og når du trænger til en slapper, kan du tage en tur på den gigantiske, roterende pladespiller.<br /> <br />
+            Se, lyt og dans dig gennem fortællinger fra syv årtiers pop- og rockhistorie.<br />
+            Tag med Steffen Brandt ind i TV-2s originale lydstudie og kom tæt på D-A-Ds ikoniske raketbas. Oplev Natasjas originale, håndskrevne udkast til ”Gi’ mig Danmark tilbage” og få fortællingen om, hvad en skuffet fan af Otto Brandenburg kan finde på.<br />
+            Træd ind i den spektakulære guldbygning, mærk energien fra de største danske navne og kom helt tæt på de kreative kræfter, som har formet din musik.<br />
+            RAGNAROCKs udstilling er smækfyldt med fortællinger om den musik, som gennem generationer har samlet tusindvis af fans og skabt soundtracket til fællesskaber, opbrud og ungdomsliv.<br />
+            Her må du både danse og synge. Du må skrue på knapper, styre lys og mixe. Og når du trænger til en slapper, kan du tage en tur på den gigantiske, roterende pladespiller.<br />
         </p>
     </div>
     
@@ -57,5 +54,6 @@
         text-align: center;
         width: 120px;
     }
+
 </style>
 
