--- a/Pages/AdminLogin.cshtml
+++ b/Pages/AdminLogin.cshtml
@@ -4,19 +4,37 @@
 }
 <h1>Admin Login</h1>
 
+<style>
+    .form-group {
+        margin-bottom: 10px; 
+    }
+
+    label {
+        display: inline-block;
+        width: 100px; 
+    }
+
+    input[type="text"], input[type="password"] {
+        width: 200px; 
+    }
+</style>
+
+
 <form method="post">
     <div asp-validation-summary="ModelOnly"></div>
     <div>
-        <label for="Username">Username:</label>
-        <input asp-for="admin.Username" type="text" id="Username" name="Username" />
-        <span asp-validation-for="admin.Username" class="text-danger"></span>
-    </div>
-    <div>
-        <label for="Password">Password:</label>
-        <input asp-for="admin.Password" type="Password" id="Password" name="Password" />
-        <span asp-validation-for="admin.Password" class="text-danger"></span>
+        <div class="form-group">
+            <label for="Username">Username:</label>
+            <input asp-for="admin.Username" type="text" id="Username" name="Username" />
+            <span asp-validation-for="admin.Username" class="text-danger"></span>
+        </div>
+        <div class="form-group">           
+            <label for="Password">Password:</label>
+            <input asp-for="admin.Password" type="Password" id="Password" name="Password" />
+            <span asp-validation-for="admin.Password" class="text-danger"></span>
+        </div>
     </div>
     <text> </text>
-    
+
     <button type="submit">Login</button>
 </form>
