--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -45,7 +45,7 @@
                 <a href="https://museumragnarock.dk/" class="dropdown-btn">KONTAKT OS</a>
             </div>
             <div class="footer-column footer-right">
-                <p>Musetails Interactive</p>
+                <p>Musetales Interactive</p>
             </div>
         </div>
     </footer>
