--- a/Pages/Shared/_Layout.cshtml.css
+++ b/Pages/Shared/_Layout.cshtml.css
@@ -39,110 +39,15 @@ button.accept-policy {
   line-height: inherit;
 }
 
-.footer {
+footer {
     background-color: black;
     color: white;
-    padding: 20px;
-    text-align: center;
-    margin-top: 0;
-    position: fixed; 
-    bottom: 0;
-    left: 0;
-    width: 100%;
+    padding: 35px 80px 0 15px;
 }
 
-.footer-container {
-    display: flex;
-    justify-content: space-between; 
-    align-items: center; 
-    gap: 20px;
-}
-
-.footer-column {
-    width: 40%;
-    text-align: left;
-}
-
-.footer-right {
-    text-align: right;
-}
-.footer-column a.dropdown-btn {
-    background-color: black;
-    color: white;
-    border: none;
-    padding: 10px;
-    font-size: 16px;
-    cursor: pointer;
-    display: inline-block;
-    text-decoration: none;
-    margin-bottom: 10px;
-    position: relative;
-    padding-bottom: 5px;
-}
-    .footer-column a.dropdown-btn:after {
-        content: '';
-        position: absolute;
-        left: 0;
-        bottom: -2px; 
-        width: 100%;
-        height: 2px;
-        background-color: transparent; 
-        transform: scaleX(0);
-        transform-origin: bottom left;
-        transition: transform 0.3s ease, background-color 0.3s ease; 
-    }
-
-    .footer-column a.dropdown-btn:hover:after {
-        transform: scaleX(1);
-        background-color: white; 
-    }
-
-.footer-column p {
-    font-size: 20px; 
-}
-
-.footer-dropdown {
-    position: relative;
-    display: inline-block;
-}
-
-.dropdown-btn {
-    background-color: black;
-    color: white;
-    border: none;
-    padding: 10px;
-    font-size: 16px;
-    cursor: pointer;
-}
-
-    .dropdown-btn:hover,
-    .dropdown-btn:focus {
-        background-color: grey;
-    }
-
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: white;
-    color: black;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-}
-
-    .dropdown-content a {
-        color: black;
-        padding: 12px 16px;
-        text-decoration: none;
-        display: block;
-    }
-
-        .dropdown-content a:hover {
-            background-color: grey;
-            color: white;
-        }
-
-.footer-dropdown:hover .dropdown-content {
-    display: block;
+.footer-grid-container {
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    gap: 25px;
 }
 
