--- a/Pages/Shared/_Layout.cshtml.css
+++ b/Pages/Shared/_Layout.cshtml.css
@@ -45,7 +45,7 @@ button.accept-policy {
     padding: 20px;
     text-align: center;
     margin-top: 0;
-    position: fixed; 
+    position: absolute; 
     bottom: 0;
     left: 0;
     width: 100%;
