--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -41,10 +41,10 @@
     <footer class="footer">
         <div class="footer-container">
             <div class="footer-column">
-                <a href="https://museumragnarock.dk/" class="dropdown-btn">OM OS</a>
-                <a href="https://museumragnarock.dk/" class="dropdown-btn">KONTAKT OS</a>
+                <a href="https://museumragnarock.dk/" style="font-family: 'Times New Roman'" class="dropdown-btn">OM OS</a>
+                <a href="https://museumragnarock.dk/" style="font-family: 'Times New Roman'" class="dropdown-btn">KONTAKT OS</a>
             </div>
-            <div class="footer-column footer-right">
+            <div class="footer-column footer-right" style="font-family:'Times New Roman'">
                 <p>Musetales Interactive</p>
             </div>
         </div>
