--- a/Pages/MuseTales/ExpoList.cshtml
+++ b/Pages/MuseTales/ExpoList.cshtml
@@ -6,17 +6,17 @@
     ViewData["Title"] = "Liste over alle udstillinger";
 }
 <header>
-    <h1 align="center">@ViewData["Title"]</h1>
+    <h1 align="center" style="font-family: 'Times New Roman'">@ViewData["Title"]</h1>
     
 </header>
-<div>
+<div class="flex">
 
 
 <div align="center">
    
     @foreach(var item in Model.AllExpos)
     {
-        <div class="card" style="width: 18rem;">
+            <div class="card" style="width: 18rem;">
             <a href="/MuseTales/MediaPLayer?id=@item.Id"><img class="img-fluid" src="~/Images/@item.PicturePath"/></a>
             <div class="card-body">
                 <h5 outline-style="auto" class="mt-0">@item.Name</h5>
