--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -7,7 +7,7 @@
 }
 
 <div class="container" style="text-align: center;">
-    <div class="text-box" style="font-size: 14px;">
+    <div class="text-box" style="font-size: 14px; font-family: 'Times New Roman', Times, serif">
         <p>
             Se, lyt og dans dig gennem fortællinger fra syv årtiers pop- og rockhistorie.<br />
             Tag med Steffen Brandt ind i TV-2s originale lydstudie og kom tæt på D-A-Ds ikoniske raketbas. Oplev Natasjas originale, håndskrevne udkast til ”Gi’ mig Danmark tilbage” og få fortællingen om, hvad en skuffet fan af Otto Brandenburg kan finde på.<br />
