--- a/Pages/MuseTales/AdminDash.cshtml
+++ b/Pages/MuseTales/AdminDash.cshtml
@@ -7,9 +7,9 @@
 
 <h1>@ViewData["Title"]</h1>
 
-<div class="container"><button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#createModal">Opret ny expo</button></div>
+<div class="container"><button type="button" class="btn btn-success" style="font-family: 'Times New Roman';" data-bs-toggle="modal" data-bs-target="#createModal">Opret ny expo</button></div>
 
-<table class="table">
+<table class="table" style="font-family: 'Times New Roman';">
     <thead>
         <tr>
             <th>#</th>
@@ -31,8 +31,8 @@
                     @item.PicturePath og @item.SoundFilePath
                 </td>
                 <td>
-                    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#updateModal-@item.Id">Opdater</button>
-                    <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#deleteModal-@item.Id">Slet</button>
+                    <button type="button" class="btn btn-primary" data-bs-toggle="modal" style="font-family: 'Times New Roman';" data-bs-target="#updateModal-@item.Id">Opdater</button>
+                    <button type="button" class="btn btn-danger" data-bs-toggle="modal" style="font-family: 'Times New Roman';" data-bs-target="#deleteModal-@item.Id">Slet</button>
                 </td>
             </tr>
 
@@ -40,17 +40,17 @@
                 <div class="modal-dialog">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h1 class="modal-title fs-5" id="deleteModalLabel">Delete expo</h1>
-                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                            <h1 class="modal-title fs-5" style="font-family: 'Times New Roman';"id="deleteModalLabel">Delete expo</h1>
+                            <button type="button" class="btn-close" style="font-family: 'Times New Roman';" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
-                        <div class="modal-body">
+                        <div style="font-family: 'Times New Roman';" class="modal-body">
                             Er du sikker på du vil slette denne expo?
                         </div>
                         <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                            <button type="button" style="font-family: 'Times New Roman';" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
                             <form asp-page-handler="delete" method="post">
                                 <input type="hidden" name="id" value="@item.Id" />
-                                <button type="submit" class="btn btn-danger">Delete</button>
+                                <button type="submit" style="font-family: 'Times New Roman';" class="btn btn-danger">Delete</button>
                             </form>
                         </div>
                     </div>
@@ -61,7 +61,7 @@
                 <div class="modal-dialog">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h1 class="modal-title fs-5" id="updateModalLabel">Opdater expo</h1>
+                            <h1 class="modal-title fs-5" style="font-family: 'Times New Roman';" id="updateModalLabel">Opdater expo</h1>
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
                         <div class="modal-body">
