--- a/Pages/MuseTales/AdminDash.cshtml
+++ b/Pages/MuseTales/AdminDash.cshtml
@@ -69,27 +69,32 @@
                                 <div class="row">
                                     <div class="col">
                                         <label>Expo navn</label>
-                                        <input class="form-control" type="text" asp-for="Expo.Name" required name="Name" value="@item.Name" />
+                                        <span class="text-danger" asp-validation-for="@item.Name"></span>
+                                        <input class="form-control" type="text" asp-for="Expo.Name" name="Name" value="@item.Name" />
                                     </div>
                                 </div>
                                 <div class="row align-items-center">
                                     <div class="col">
                                         <label>Oplæsningen i tekstform</label>
-                                        <textarea class="form-control" asp-for="@item.Description" required name="Description" rows="6"></textarea>
+                                        <span class="text-danger" asp-validation-for="@item.Description"></span>
+                                        <textarea class="form-control" asp-for="@item.Description" name="Description" rows="6"></textarea>
                                     </div>
 
                                     <div class="row">
                                         <label>Upload billede til udstillingen</label>
-                                        <input asp-for="Expo.PicturePath" class="form-control form-control-sm" type="file" required name="PicturePath">
+                                        <span class="text-danger" asp-validation-for="@item.PicturePath"></span>
+                                        <input asp-for="Expo.PicturePath" class="form-control form-control-sm" type="file" name="PicturePath">
                                     </div>
 
                                     <div class="row">
                                         <label>Upload lydfil til oplæsning</label>
-                                        <input asp-for="Expo.SoundFilePath" class="form-control form-control-sm" type="file" required name="SoundFilePath">
+                                        <span class="text-danger" asp-validation-for="@item.SoundFilePath"></span>
+                                        <input asp-for="Expo.SoundFilePath" class="form-control form-control-sm" type="file" name="SoundFilePath">
                                     </div>
                                 </div>
                                 <input type="hidden" name="id" value="@item.Id" />
                                 <button class="form-control" type="submit">opdater</button>
+                                <div asp-validation-summary="All"></div>
                             </form>
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -112,25 +117,29 @@
             <div class="modal-body">
                 <form asp-page-handler="create" method="post" enctype="multipart/form-data">
                     <div class="row">
-                        <div class="col">
-                            <label>Expo navn</label>
-                            <input class="form-control" type="text" asp-for="Expo.Name" name="Name" />
+                        <div class="form-group">
+                            <label asp-for="@Model.Expo.Name" class="control-label">Expo navn</label>
+                            <input asp-for="@Model.Expo.Name" type="text" class="form-control"/>
+                            <span asp-validation-for="@Model.Expo.Name" class="text-danger"></span>
                         </div>
                     </div>
                     <div class="row align-items-center">
-                        <div class="col">
-                            <label>Oplæsningen i tekstform</label>
-                            <textarea class="form-control" asp-for="Expo.Description" name="Description" rows="6"></textarea>
+                        <div class="form-group">
+                            <label asp-for="@Model.Expo.Description">Oplæsningen i tekstform</label>
+                            <textarea asp-for="@Model.Expo.Description" class="form-control" rows="6"></textarea>
+                            <span asp-validation-for="@Model.Expo.Description" class="text-danger"></span>
                         </div>
 
-                        <div class="row">
-                            <label>Upload billede til udstillingen</label>
-                            <input asp-for="Expo.PicturePath" class="form-control form-control-sm" type="file" name="PicturePath">
+                        <div class="form-group">
+                            <label asp-for="@Model.Expo.PicturePath">Upload billede til udstillingen</label>
+                            <input asp-for="@Model.Expo.PicturePath" class="form-control form-control-sm" type="file" name="PicturePath">
+                            <span asp-validation-for="@Model.Expo.PicturePath" class="text-danger"></span>
                         </div>
 
-                        <div class="row">
-                            <label>Upload lydfil til oplæsning</label>
-                            <input asp-for="Expo.SoundFilePath" class="form-control form-control-sm" type="file" name="SoundFilePath">
+                        <div class="form-group">
+                            <label asp-for="@Model.Expo.SoundFilePath">Upload lydfil til oplæsning</label>
+                            <input asp-for="@Model.Expo.SoundFilePath" class="form-control form-control-sm" type="file" name="SoundFilePath">
+                            <span asp-validation-for="@Model.Expo.SoundFilePath" class="text-danger"></span>
                         </div>
                     </div>
                     @{
